Eigenvalues aren't necessarily greater than 1

--- a/pca.html
+++ b/pca.html
@@ -72,7 +72,7 @@ $$
 
 --
 
-The square matrix makes the eigenvector *bigger*, but it doesn't change its *direction*.
+The square matrix changes the eigenvector's *size*, but it doesn't change its *direction*.
 
 ---
 # Linear algebra you forgot in 1st-year uni
