--- a/pca.html
+++ b/pca.html
@@ -117,8 +117,7 @@ mtcars_scaled &lt;- mtcars %&gt;%
 
 
 ```r
-# square_ggplot is a helper function
-# that uses ggplot2
+# `square_ggplot` is a helper function
 mtcars_scaled %&gt;% square_ggplot
 ```
 ]
